--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>CR Block Renderer</title>
   <script src="js/main.js"></script>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<style>body {background: #E0E0E0;}</style>
 </head>
 <body>
 	<h3>Top Image</h3>
