Added shadow toggle

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	<input type='file' id="sideImage" style="display:none">
 	<button id="sideImageButton" onclick="document.getElementById('sideImage').click()" style="padding: 0;height: fit-content;"><i class='bx bx-image-add bx-md'></i></button>
 	<img id="sideImagePreview" onclick="document.getElementById('sideImage').click()" src="" style="display:none;max-width: 50px;image-rendering: pixelated;">
+	<br>
+	<br>
+	<input type="checkbox" id="shadowBlock" checked><span> Has Shadow</span>
 	<h3>Block Renderer</h3>
 	<canvas width="180" height="200" id="blockCanvas"></canvas>
 	<button onclick="downloadCube()" style="padding: 0;height: fit-content;">Download Cube <i class='bx bxs-download'></i></button>
