--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
   <title>CR Block Renderer</title>
   <script src="js/main.js"></script>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-	<style>body {background: #E0E0E0;}</style>
+	<style>body {background: #E0E0E0;} div {text-align:center;} h3{margin-bottom:5px;margin-right:10px;}</style>
 </head>
 <body>
-	<h3>Top Image</h3>
-	<input type='file' id="topImage" style="display:none">
-	<button id="topImageButton" onclick="document.getElementById('topImage').click()" style="padding: 0;height: fit-content;"><i class='bx bx-image-add bx-md'></i></button>
-	<img id="topImagePreview" onclick="document.getElementById('topImage').click()" src="" style="display:none;max-width: 50px;image-rendering: pixelated;">
-	<h3>Side Image</h3>
-	<input type='file' id="sideImage" style="display:none">
-	<button id="sideImageButton" onclick="document.getElementById('sideImage').click()" style="padding: 0;height: fit-content;"><i class='bx bx-image-add bx-md'></i></button>
-	<img id="sideImagePreview" onclick="document.getElementById('sideImage').click()" src="" style="display:none;max-width: 50px;image-rendering: pixelated;">
+	<div style="width: fit-content;">
+		<h3>Top Image</h3>
+		<input type='file' id="topImage" style="display:none">
+		<button id="topImageButton" onclick="document.getElementById('topImage').click()" style="padding: 0;height: fit-content;"><i class='bx bx-image-add bx-md'></i></button>
+		<img id="topImagePreview" onclick="document.getElementById('topImage').click()" src="" style="display:none;width: 50px;image-rendering: pixelated;">
+	</div>
+	<div style="display:flex">
+		<div>
+			<h3 id="leftH3">Side Image</h3>
+			<input type='file' id="leftImage" style="display:none">
+			<button id="leftImageButton" onclick="document.getElementById('leftImage').click()" style="padding: 0;height: fit-content;"><i class='bx bx-image-add bx-md'></i></button>
+			<img id="leftImagePreview" onclick="document.getElementById('leftImage').click()" src="" style="display:none;width: 50px;image-rendering: pixelated;">
+		</div>
+		<div id="rightDiv" style="display:none">
+			<h3>Right Image</h3>
+			<input type='file' id="rightImage" style="display:none">
+			<button id="rightImageButton" onclick="document.getElementById('rightImage').click()" style="padding: 0;height: fit-content;"><i class='bx bx-image-add bx-md'></i></button>
+			<img id="rightImagePreview" onclick="document.getElementById('rightImage').click()" src="" style="display:none;width: 50px;image-rendering: pixelated;">
+		</div>
+	</div>
 	<br>
+	<br>
+	<input type="checkbox" id="twoFaces"><span> Two Faces</span>
 	<br>
 	<input type="checkbox" id="shadowBlock" checked><span> Has Shadow</span>
 	<h3>Block Renderer</h3>
