--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 	<br>
 	<br>
-	<input type="checkbox" id="twoFaces"><span> Two Faces</span>
+	<input type="checkbox" id="twoFaces"><span> Two Sides</span>
 	<br>
 	<input type="checkbox" id="shadowBlock" checked><span> Has Shadow</span>
 	<h3>Block Renderer</h3>
