--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 	<input type="checkbox" id="twoFaces"><span> Two Sides</span>
 	<br>
 	<input type="checkbox" id="shadowBlock" checked><span> Has Shadow</span>
+	<br>
+	<input type="checkbox" id="isSlab"><span> Is Slab</span>
 	<h3>Block Renderer</h3>
 	<canvas width="180" height="200" id="blockCanvas"></canvas>
 	<button onclick="downloadCube()" style="padding: 0;height: fit-content;">Download Cube <i class='bx bxs-download'></i></button>
