--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<br>
 	<input type="checkbox" id="isSlab"><span> Is Slab</span>
 	<br>
-	<input type="checkbox" id="isStair" checked><span> Is Stair</span>
+	<input type="checkbox" id="isStair"><span> Is Stair</span>
 	<h3>Block Renderer</h3>
 	<button onclick="downloadCube()" style="padding: 0;height: fit-content;">Download Cube <i class='bx bxs-download'></i></button>
 	<canvas width="180" height="200" id="blockCanvas"></canvas>
