--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>CR Block Renderer</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/grass_top.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 		%sveltekit.head%
-		<style>body {background: #E0E0E0;} div {text-align:center;} h3{margin-bottom:5px;margin-right:10px;}</style>
+		<style>body {background: #E0E0E0;margin-top: 0;}</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<main>%sveltekit.body%</main>
